# toolgovern

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  toolgovern.policy.example.yml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml
benchmarks/: README.md  corpus.ts  detection-rate.ts  latency.ts
docs/: branch-protection.md  concepts.md  getting-started.md  policy-schema.md  security-model.md  trace-format.md
docs/integrations/: ci.md
dotnet/ToolGovern/: README.md  ToolGovern.slnx
dotnet/ToolGovern.AgentFramework/src/ToolGovern.AgentFramework/: AIFunctionGovernanceExtensions.cs  README.md  ToolGovern.AgentFramework.csproj  ToolGovernAIFunction.cs
dotnet/ToolGovern.AgentFramework/test/ToolGovern.AgentFramework.Tests/: ToolGovern.AgentFramework.Tests.csproj  ToolGovernAIFunctionTests.cs
dotnet/ToolGovern/src/ToolGovern/: README.md  ToolGovern.csproj  Types.cs
dotnet/ToolGovern/src/ToolGovern/Approval/: PendingApprovalRegistry.cs
dotnet/ToolGovern/src/ToolGovern/Classifier/: ClassifierEngine.cs  CredentialAccessRules.cs  CrossAgentInheritanceRules.cs  FilesystemScopeRules.cs  InformationFlowRules.cs  NetworkEgressRules.cs  RuleUtil.cs  ShellRiskRules.cs
dotnet/ToolGovern/src/ToolGovern/Middleware/: IdempotencyCache.cs  OnToolCall.cs
dotnet/ToolGovern/src/ToolGovern/Scoping/: InheritanceEnforcer.cs  ScopeDeclarationHelpers.cs
dotnet/ToolGovern/src/ToolGovern/Shared/: PathUtil.cs
dotnet/ToolGovern/src/ToolGovern/Trace/: CanonicalJson.cs  TraceEntryCodec.cs  TraceReader.cs  TraceWriter.cs
dotnet/ToolGovern/test/ToolGovern.Tests/: ToolGovern.Tests.csproj
dotnet/ToolGovern/test/ToolGovern.Tests/Approval/: PendingApprovalRegistryTests.cs
dotnet/ToolGovern/test/ToolGovern.Tests/Classifier/: CredentialAccessRulesTests.cs  CrossAgentInheritanceRulesTests.cs  FilesystemScopeRulesTests.cs  InformationFlowRulesTests.cs  NetworkEgressRulesTests.cs  ShellRiskRulesTests.cs
dotnet/ToolGovern/test/ToolGovern.Tests/Middleware/: OnToolCallTests.cs
dotnet/ToolGovern/test/ToolGovern.Tests/Scoping/: InheritanceEnforcerTests.cs
dotnet/ToolGovern/test/ToolGovern.Tests/Trace/: CanonicalJsonTests.cs  TraceReaderTests.cs  TraceWriterTests.cs
integrations/agent-framework/: README.md  pyproject.toml
integrations/agent-framework/src/toolgovern_integration_agent_framework/: __init__.py  mcp_trust.py  middleware.py  tool.py
integrations/agent-framework/tests/: test_mcp_trust.py  test_middleware.py  test_tool.py
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/src/toolgovern_integration_autogen/: __init__.py  _sync_bridge.py  code_executor.py  tool.py
integrations/autogen/tests/: test_code_executor.py  test_tool.py
integrations/claude-agent-sdk/: README.md  pyproject.toml
integrations/claude-agent-sdk/src/toolgovern_integration_claude_agent_sdk/: __init__.py  hook.py
integrations/claude-agent-sdk/tests/: test_hook.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/src/toolgovern_integration_crewai/: __init__.py
integrations/crewai/tests/: test_governed_tool.py
integrations/langgraph/: README.md  package.json  tsconfig.json
integrations/langgraph-python/: README.md  pyproject.toml
integrations/langgraph-python/docs/: root-cause.md
integrations/langgraph-python/src/toolgovern_integration_langgraph/: __init__.py
integrations/langgraph-python/tests/: conftest.py  test_governed_tool.py  test_governed_wrap_tool_call.py
integrations/langgraph/src/: index.ts
integrations/langgraph/test/: index.test.ts
integrations/oma/: README.md  package.json
integrations/oma/src/: index.ts
integrations/oma/test/: governedExecutor.test.ts  governedTool.test.ts
python/: LICENSE  README.md  pyproject.toml
python/examples/: README.md
python/examples/01-gate-a-tool/: gate_shell.py
python/examples/02-scope-inheritance/: spawn_sub_agent.py
python/examples/03-verify-audit-trail/: verify_trace.py
python/src/toolgovern/: __init__.py  cli.py  types.py
python/src/toolgovern/approval/: __init__.py  pending_registry.py
python/src/toolgovern/classifier/: __init__.py  credential_access.py  cross_agent_inheritance.py  filesystem_scope.py  index.py  information_flow.py  network_egress.py  shell_risk.py  util.py
python/src/toolgovern/mcp_trust/: __init__.py
python/src/toolgovern/middleware/: __init__.py  idempotency_cache.py  on_tool_call.py
python/src/toolgovern/policy/: __init__.py  load_policy.py  validate_policy.py
python/src/toolgovern/scoping/: __init__.py  inheritance_enforcer.py  scope_declaration.py
python/src/toolgovern/shared/: paths.py
python/src/toolgovern/trace/: __init__.py  canonical_json.py  trace_reader.py  trace_writer.py
python/tests/: conftest.py  test_classifier_credential_access.py  test_classifier_cross_agent_inheritance.py  test_classifier_filesystem_scope.py  test_classifier_index.py  test_classifier_information_flow.py  test_classifier_network_egress.py  test_classifier_shell_risk.py  test_cli.py  test_mcp_trust.py  test_middleware_on_tool_call.py  test_pending_registry.py  test_policy.py  test_scoping_inheritance_enforcer.py  test_scoping_scope_declaration.py  test_trace_canonical_json.py  test_trace_reader.py  test_trace_writer.py
