[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolgovern-cli"
version = "0.1.2"
description = "Runtime governance middleware for AI agent tool calls -- gate shell, filesystem, network, and credential access before a tool executes."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["security", "ai-agents", "agent-governance", "tool-calling", "runtime-security", "audit-trail", "cli", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0,<7",
  "cryptography>=48.0.1,<49",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/toolgovern"
Repository = "https://github.com/RudrenduPaul/toolgovern"
"Bug Tracker" = "https://github.com/RudrenduPaul/toolgovern/issues"
Changelog = "https://github.com/RudrenduPaul/toolgovern/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/toolgovern/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
toolgovern-cli = "toolgovern.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/toolgovern"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/toolgovern",
  "tests",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
