[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolgovern-integration-agent-framework"
version = "0.1.0"
description = "Route Microsoft Agent Framework (Python) tool calls through toolgovern's govern_tool() gate, and surface require-approval decisions through Agent Framework's own function_approval_request/response flow via a FunctionMiddleware."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = [
  "microsoft-agent-framework",
  "agent-framework",
  "ai-agents",
  "agent-security",
  "runtime-governance",
  "tool-calling",
  "toolgovern",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "toolgovern>=0.1.0,<0.2",
  "agent-framework-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "pytest-asyncio>=0.23,<1",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/toolgovern"
Repository = "https://github.com/RudrenduPaul/toolgovern"
"Bug Tracker" = "https://github.com/RudrenduPaul/toolgovern/issues"
Documentation = "https://github.com/RudrenduPaul/toolgovern/blob/main/integrations/agent-framework/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/toolgovern_integration_agent_framework"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/toolgovern_integration_agent_framework",
  "tests",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
